welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if(!estFaceMur){avance();}
getCouleurSol();
if (getCouleurSol()=Color.green){}else{recule();}
}        
